[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Wars/WarMenu.gd" type="Script" id=1]
[ext_resource path="res://Themes/AutocratTheme.tres" type="Theme" id=2]

[node name="WarMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1030.0
margin_bottom = 605.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarDetailLabel" type="Label" parent="."]
margin_left = 108.408
margin_top = 78.1225
margin_right = 937.408
margin_bottom = 429.122
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoneButton" type="Button" parent="."]
margin_left = 460.209
margin_top = 495.006
margin_right = 556.209
margin_bottom = 559.006
theme = ExtResource( 2 )
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="DoneButton" to="." method="_on_DoneButton_pressed"]
